# vxengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/vxengine/: elf_loader.h  engine.h  exception_handler.h  kernel_env.h  lua_bindings.h  lua_plugin_api.h  memory.h  pe_loader.h  solver.h  thread_manager.h  tracer.h  vxengine.h  win_api.h  win_api_ntdll.h  win_env.h
include/vxengine/cpu/: icpu.h
include/vxengine/cpu/arm/: arm_cpu.h
include/vxengine/cpu/x64/: x64_cpu.h
include/vxengine/cpu/x86/: x86_cpu.h
lua/: deobfuscate.lua  example_plugin.lua  init.lua  win32_api.lua
src/: behavior_report.cpp  behavior_report.h  elf_loader.cpp  engine.cpp  exception_handler.cpp  kernel_env.cpp  lua_bindings.cpp  lua_plugin_api.cpp  main.cpp  mcp_server.cpp  memory.cpp  pe_loader.cpp  pe_writer.cpp  pe_writer.h  registry.h  solver.cpp  thread_manager.cpp  tracer.cpp  unpacker.cpp  unpacker.h  vfs.cpp  vfs.h  win_api.cpp  win_api_advapi32.cpp  win_api_advapi32_security.cpp  win_api_cng.cpp  win_api_crypt32.cpp  win_api_extended.cpp  win_api_fltmgr.cpp  win_api_hal.cpp  win_api_ntdll.cpp  win_api_ntoskrnl.cpp  win_api_ole32.cpp  win_api_user32.cpp  win_api_vfs.cpp  win_api_winhttp.cpp  win_api_wininet.cpp  win_api_ws2_32.cpp  win_env.cpp
src/cpu/arm/: arm_cpu.cpp  arm_insns.cpp
src/cpu/x64/: x64_cpu.cpp  x64_insns.cpp
src/cpu/x86/: x86_cpu.cpp  x86_fpu.cpp  x86_insns.cpp
tests/: list_api.lua  test_all_features.lua  test_simple.c
